--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
       </div>
     </section>
-    <input id="inputRange" type="range" min="0" max="5000" step="50">
+<!--     <input id="inputRange" type="range" min="0" max="5000" step="50"> -->
   </main>
   <!-- end -->
   
