--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <section class="music-content">
       <div class="music-box">
         <!-- Кнопка для радиострима controls -->
-        <div class="audio-player-wrap">
-          <audio src="https://aurora.shoutca.st/listen/freestyle/radio.mp3" class="audio-player" crossorigin="anonymous">
+        <div class="audio-player-wrap">  
+          <audio src="https://mars.streamerr.co:7103" class="audio-player" crossorigin="anonymous">
                 Your browser does not support the
                 <code>audio</code> element.
           </audio>
