--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="music-box">
         <!-- Кнопка для радиострима controls -->
         <div class="audio-player-wrap">  
-          <audio src="https://omel.radioca.st/" class="audio-player" crossorigin="anonymous">
+          <audio src="https://omel.radioca.st" class="audio-player" crossorigin="anonymous">
                 Your browser does not support the
                 <code>audio</code> element.
           </audio>
