--- a/index.html
+++ b/index.html
@@ -34,10 +34,13 @@
               <div class="audio-controls__current-progress"></div>
             </div>
           </div>
+          <div class="volume-control">
+            <label for="volume">Громкость:</label>
+            <input type="range" id="volume" min="0" max="1" step="0.01" value="1">
+          </div>
         </div>
       </div>
-    </section>
-<!--     <input id="inputRange" type="range" min="0" max="5000" step="50"> -->
+    </section>      
   </main>
   <!-- end -->
   
