--- a/index.html
+++ b/index.html
@@ -55,5 +55,7 @@
   <script src="js/gsap.min.js"></script>
   <!-- Скрипт анимации кнопки для радио -->
   <script src="js/radio_button.js"></script>  
+  <!-- Регулятор громкости радио -->
+  <script src="vol-radio.js"></script>  
 </body>
 </html>
