--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="music-box">
         <!-- Кнопка для радиострима controls -->
         <div class="audio-player-wrap">  
-          <audio src="https://visual.shoutca.st/stream/dance-radio-station/stream" class="audio-player" crossorigin="anonymous">
+          <audio src="https://visual.shoutca.st/stream/dance-radio-station/stream" id="audio" class="audio-player" crossorigin="anonymous">
                 Your browser does not support the
                 <code>audio</code> element.
           </audio>
@@ -35,7 +35,6 @@
             </div>
           </div>
           <div class="volume-control">
-            <label for="volume">Громкость:</label>
             <input type="range" id="volume" min="0" max="1" step="0.01" value="1">
           </div>
         </div>
