--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
   <!-- Скрипт анимации кнопки для радио -->
   <script src="js/radio_button.js"></script>  
   <!-- Регулятор громкости радио -->
-  <script src="vol-radio.js"></script>  
+  <script src="js/vol-radio.js"></script>  
 </body>
 </html>
