--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="audio-player-wrap">  
           <audio src="https://visual.shoutca.st/stream/dance-radio-station/stream" id="audio" class="audio-player" crossorigin="anonymous">
                 Your browser does not support the
-                <code>audio</code> element.
+                <code>audio</code>
           </audio>
           <div class="audio-controls">
             <div class="audio-controls__play-toggle">
