--- a/index.html
+++ b/index.html
@@ -56,5 +56,7 @@
   <script src="js/radio_button.js"></script>  
   <!-- Регулятор громкости радио -->
   <script src="js/vol-radio.js"></script>  
+  <!-- Автоматический перезапуск радио в случае прерываени аудио потока -->
+  <script src="js/reload-page-and-start-radio.js"></script> 
 </body>
 </html>
