--- a/index.html
+++ b/index.html
@@ -83,5 +83,7 @@
   <script src="js/vol-radio.js"></script>  
   <!-- Автоматический перезапуск радио в случае прерываени аудио потока -->
   <script src="js/reload-page-and-start-radio.js"></script> 
+  <!-- Код для функционирования эквалайзера -->
+  <script src="js/equalizer.js"></script> 
 </body>
 </html>
