--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
       </div>
     </section> 
-    <section>
+<!--     <section>
         <div class="equalizer">
             <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>32Hz</label></div>
             <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>64Hz</label></div>
@@ -62,7 +62,7 @@
             <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>8kHz</label></div>
             <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>16kHz</label></div>
       </div>  
-    </section>
+    </section> -->
   </main>
   <!-- end -->
   
