--- a/index.html
+++ b/index.html
@@ -80,6 +80,6 @@
   <!-- Автоматический перезапуск радио в случае прерываени аудио потока -->
   <script src="js/reload-page-and-start-radio.js"></script> 
   <!-- Код для функционирования эквалайзера -->
-  <script src="js/equalizer.js"></script> 
+<!--   <script src="js/equalizer.js"></script>  -->
 </body>
 </html>
