--- a/index.html
+++ b/index.html
@@ -74,12 +74,13 @@
   <!-- Подключение переменной без которой не будет корректно работать кнопка для радио -->
   <script src="js/gsap.min.js"></script>
   <!-- Скрипт анимации кнопки для радио -->
-  <script src="js/radio_button.js"></script>  
+<!--   <script src="js/radio_button.js"></script>   -->
   <!-- Регулятор громкости радио -->
   <script src="js/vol-radio.js"></script>  
   <!-- Автоматический перезапуск радио в случае прерываени аудио потока -->
   <script src="js/reload-page-and-start-radio.js"></script> 
   <!-- Код для функционирования эквалайзера -->
 <!--   <script src="js/equalizer.js"></script>  -->
+    <script scr="js/animationRadioButtonAndEqualizer.js"></script>
 </body>
 </html>
