--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
   <!-- end -->
   <script src="js/all-audio.js"></script>
   <script src="js/vol.js"></script>
-  <script src="js/menu.js"></script>
-  <script src="js/accordion.js"></script>
+<!--   <script src="js/menu.js"></script> -->
+<!--   <script src="js/accordion.js"></script> -->
   <!-- Подключение переменной без которой не будет корректно работать кнопка для радио -->
   <script src="js/gsap.min.js"></script>
   <!-- Скрипт анимации кнопки для радио -->
