--- a/index.html
+++ b/index.html
@@ -67,18 +67,18 @@
   <!-- footer -->
   <footer></footer>
   <!-- end -->
-  <script src="js/all-audio.js"></script>
-  <script src="js/vol.js"></script>
+<!--   <script src="js/all-audio.js"></script> -->
+<!--   <script src="js/vol.js"></script> -->
 <!--   <script src="js/menu.js"></script> -->
 <!--   <script src="js/accordion.js"></script> -->
   <!-- Подключение переменной без которой не будет корректно работать кнопка для радио -->
   <script src="js/gsap.min.js"></script>
   <!-- Скрипт анимации кнопки для радио -->
-  <script src="js/radio_button.js"></script>  
+<!--   <script src="js/radio_button.js"></script>   -->
   <!-- Регулятор громкости радио -->
   <script src="js/vol-radio.js"></script>  
 
-    <script scr="js/animationRadioButtonAndEqualizer.js"></script>
+<script scr="js/animationRadioButtonAndEqualizer.js"></script>
     
   <!-- Автоматический перезапуск радио в случае прерываени аудио потока -->
   <script src="js/reload-page-and-start-radio.js"></script> 
