--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
   <!-- footer -->
   <footer></footer>
   <!-- end -->
-  <script src="js/all-audio.js"></script>
-  <script src="js/vol.js"></script>
+<!--   <script src="js/all-audio.js"></script> -->
+<!--   <script src="js/vol.js"></script> -->
 <!--   <script src="js/menu.js"></script> -->
 <!--   <script src="js/accordion.js"></script> -->
   <!-- Подключение переменной без которой не будет корректно работать кнопка для радио -->
