--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
   <!-- Регулятор громкости радио -->
   <script src="js/vol-radio.js"></script>  
 
-<!-- <script scr="js/animationRadioButtonAndEqualizer.js"></script> -->
+<script scr="js/animationRadioButtonAndEqualizer.js"></script>
     
   <!-- Автоматический перезапуск радио в случае прерываени аудио потока -->
 <!--   <script src="js/reload-page-and-start-radio.js"></script>  -->
   <!-- Код для функционирования эквалайзера -->
-  <script src="js/equalizer.js"></script> 
+<!--   <script src="js/equalizer.js"></script>  -->
     
 </body>
 </html>
