--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <!-- Регулятор громкости радио -->
   <script src="js/vol-radio.js"></script>  
 
-<script scr="js/animationRadioButtonAndEqualizer.js"></script>
+<script src="js/animationRadioButtonAndEqualizer.js"></script>
     
   <!-- Автоматический перезапуск радио в случае прерываени аудио потока -->
 <!--   <script src="js/reload-page-and-start-radio.js"></script>  -->
