--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <!-- Подключение переменной без которой не будет корректно работать кнопка для радио -->
   <script src="js/gsap.min.js"></script>
   <!-- Скрипт анимации кнопки для радио -->
-  <script src="js/radio_button.js"></script>  
+<!--   <script src="js/radio_button.js"></script>   -->
   <!-- Регулятор громкости радио -->
   <script src="js/vol-radio.js"></script>  
 
