--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
             <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>1.25kHz</label></div>
            </div> 
            <div class="equalizer-row"> 
+            <button id="save-eq-settings">Save</button>
+            <button id="reset-eq-settings">Reset</button>
             <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>1.6kHz</label></div>
             <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>2kHz</label></div>
             <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>2.5kHz</label></div>
