--- a/index.html
+++ b/index.html
@@ -41,8 +41,10 @@
         </div>
       </div>
       <div class="equalizer-container">
-          <button id="save-eq-settings">Save</button>
-          <button id="reset-eq-settings">Reset</button>
+          <div class="equalizer-container__wrapp-buttons">
+              <button id="save-eq-settings">Save</button>
+              <button id="reset-eq-settings">Reset</button>
+          </div>
           <div class="equalizer-row">
             <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>32Hz</label></div>
             <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>64Hz</label></div>
