--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
       </div>
       <div class="equalizer-container">
-          <div class="equalizer-container__wrapp-buttons">
+          <div">
               <button id="save-eq-settings">Save</button>
               <button id="reset-eq-settings">Reset</button>
           </div>
