--- a/index.html
+++ b/index.html
@@ -41,31 +41,31 @@
         </div>
       </div>
       <div class="equalizer-container">
-          <div">
-              <button id="save-eq-settings">Save</button>
-              <button id="reset-eq-settings">Reset</button>
+          <div>
+                <button id="save-eq-settings">Save</button>
+                <button id="reset-eq-settings">Reset</button>
           </div>
           <div class="equalizer-row">
-            <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>32Hz</label></div>
-            <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>64Hz</label></div>
-            <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>125Hz</label></div>
-            <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>250Hz</label></div>
-            <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>500Hz</label></div>
-            <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>630Hz</label></div>
-            <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>800Hz</label></div>
-            <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>1kHz</label></div>
-            <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>1.25kHz</label></div>
+                <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>32Hz</label></div>
+                <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>64Hz</label></div>
+                <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>125Hz</label></div>
+                <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>250Hz</label></div>
+                <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>500Hz</label></div>
+                <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>630Hz</label></div>
+                <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>800Hz</label></div>
+                <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>1kHz</label></div>
+                <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>1.25kHz</label></div>
            </div> 
            <div class="equalizer-row"> 
-            <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>1.6kHz</label></div>
-            <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>2kHz</label></div>
-            <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>2.5kHz</label></div>
-            <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>3.15kHz</label></div>
-            <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>4kHz</label></div>
-            <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>5kHz</label></div>
-            <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>6.3kHz</label></div>
-            <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>8kHz</label></div>
-            <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>16kHz</label></div>
+                <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>1.6kHz</label></div>
+                <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>2kHz</label></div>
+                <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>2.5kHz</label></div>
+                <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>3.15kHz</label></div>
+                <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>4kHz</label></div>
+                <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>5kHz</label></div>
+                <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>6.3kHz</label></div>
+                <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>8kHz</label></div>
+                <div class="band"><input type="range" min="-12" max="12" value="0" step="1"><label>16kHz</label></div>
            </div>
       </div>  
     </section> 
