--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
   <!-- end -->
   
   <!-- footer -->
-  <footer></footer>
+  <footer>
+      Всі права захищені
+  </footer>
   <!-- end -->
 <!--   <script src="js/all-audio.js"></script> -->
 <!--   <script src="js/vol.js"></script> -->
