--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   
   <!-- footer -->
   <footer>
-      Всі права захищені
+      <p>Всі права захищені</p>
   </footer>
   <!-- end -->
 <!--   <script src="js/all-audio.js"></script> -->
