--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <script src="js/animationRadioButtonAndEqualizer.js"></script>
     
   <!-- Автоматический перезапуск радио в случае прерываени аудио потока -->
-<!--   <script src="js/reload-page-and-start-radio.js"></script>  -->
+  <script src="js/reload-page-and-start-radio.js"></script> 
   <!-- Код для функционирования эквалайзера -->
 <!--   <script src="js/equalizer.js"></script>  -->
     
