--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <!-- end -->
 <!--   <script src="js/all-audio.js"></script> -->
 <!--   <script src="js/vol.js"></script> -->
-<!--   <script src="js/menu.js"></script> -->
+  <script src="js/menu.js"></script>
 <!--   <script src="js/accordion.js"></script> -->
   <!-- Подключение переменной без которой не будет корректно работать кнопка для радио -->
   <script src="js/gsap.min.js"></script>
@@ -87,8 +87,8 @@
 <!--   <script src="js/radio_button.js"></script>   -->
   <!-- Регулятор громкости радио -->
   <script src="js/vol-radio.js"></script>  
-
-<script src="js/animationRadioButtonAndEqualizer.js"></script>
+  <!-- Скрипт анимации кнопки радио и функционирования эквалайзера + кнопок Save и Reset -->
+  <script src="js/animationRadioButtonAndEqualizer.js"></script>
     
   <!-- Автоматический перезапуск радио в случае прерываени аудио потока -->
   <script src="js/reload-page-and-start-radio.js"></script> 
