--- a/index.html
+++ b/index.html
@@ -109,6 +109,6 @@
   <!-- Код для функционирования эквалайзера -->
 <!--   <script src="js/equalizer.js"></script>  -->
    <!--     Модальное окно -->
-   <script src="modal.js"></script>
+   <script src="js/modal.js"></script>
 </body>
 </html>
