--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <div class="music-box">
         <!-- Кнопка для радиострима controls -->
         <div class="audio-player-wrap">  
-          <audio src="https://visual.shoutca.st/stream/dance-radio-station/stream" id="audio" class="audio-player" crossorigin="anonymous">
+<!--             https://visual.shoutca.st/stream/dance-radio-station/stream -->
+          <audio src="https://myradio24.org/73251" id="audio" class="audio-player" crossorigin="anonymous">
                 Your browser does not support the
                 <code>audio</code>
           </audio>
