--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- Кнопка для радиострима controls -->
         <div class="audio-player-wrap">  
 <!--             https://visual.shoutca.st/stream/dance-radio-station/stream -->
-          <audio src="https://visual.shoutca.st/stream/dance-radio-station/stream" id="audio" class="audio-player" crossorigin="anonymous">
+          <audio src="https://myradio24.org/29509" id="audio" class="audio-player" crossorigin="anonymous">
                 Your browser does not support the
                 <code>audio</code>
           </audio>
