--- a/index.html
+++ b/index.html
@@ -98,17 +98,12 @@
 <!--   <script src="js/accordion.js"></script> -->
   <!-- Подключение переменной без которой не будет корректно работать кнопка для радио -->
   <script src="js/gsap.min.js"></script>
-  <!-- Скрипт анимации кнопки для радио -->
-<!--   <script src="js/radio_button.js"></script>   -->
   <!-- Регулятор громкости радио -->
   <script src="js/vol-radio.js"></script>  
   <!-- Скрипт анимации кнопки радио и функционирования эквалайзера + кнопок Save и Reset -->
   <script src="js/animationRadioButtonAndEqualizer.js"></script>
-    
-  <!-- Автоматический перезапуск радио в случае прерывания аудио потока -->
+  <!-- Автоматический перезапуск радио в случае прерывания аудио потока (не работает скрипт) -->
   <script src="js/reload-page-and-start-radio.js"></script> 
-  <!-- Код для функционирования эквалайзера -->
-<!--   <script src="js/equalizer.js"></script>  -->
    <!--     Модальное окно -->
    <script src="js/modal.js"></script>
 </body>
